fix spacing on mobile view

--- a/src/app/grid/gridClient.module.css
+++ b/src/app/grid/gridClient.module.css
@@ -58,6 +58,6 @@
 }
 @media (max-width: 600px) {
   .unOrderedListContainer {
-    margin: 7rem;
+    margin: 7rem auto;
   }
 }
