--- a/src/components/notFoundOverlay.module.css
+++ b/src/components/notFoundOverlay.module.css
@@ -44,3 +44,9 @@
   margin-bottom: 2.5rem;
   font-size: 1.25rem;
 }
+
+@media (max-width: 600px) {
+  .container {
+    margin: auto;
+  }
+}
